@@ -1,5 +1,10 @@
 # SpringBoot
 
+> -XX:+PrintGCDetails
+> -Xms25m
+> -Xmx25m 
+> -XX:+PrintCommandLineFlags
+
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
